--- a/index.html
+++ b/index.html
@@ -10,12 +10,24 @@
 </head>
 
 <body>
-    <!-------------
+    <!-- section-1 -->
+    <section class="container">
+        <!-------------
         header strt 
         ------------->
-    <header>
-        <h1>Conmebol Copa America 2021
-        </h1>
+        <header>
+            <div class="adjust">
+                <div class="Copa-2021">
+                    <h1>Conmebol <br> Copa America <br> 2021
+                    </h1>
+                    <a class="link-button" href="https://www.youtube.com/">Watch Live</a>
+                </div>
+
+                <img class="live-images" src="images/banner.png" alt="">
+
+
+            </div>
+    </section>
     </header>
 
 </body>
