--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive-football</title>
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-    <!-- section-1 -->
-    <section class="container">
-        <!-------------
-        header strt 
-        ------------->
+    <!-- main start -->
+    <main>
+        <!-- header start -->
         <header>
+
+        </header>
+
+        <!-- section-1 -->
+        <section class="container">
+
+
             <div class="adjust">
                 <div class="Copa-2021">
                     <h1>Conmebol <br> Copa America <br> 2021
@@ -27,9 +33,107 @@
 
 
             </div>
-    </section>
-    </header>
+        </section>
 
+        <!-- players -->
+        <section class="best-players">
+
+            <div class="players">
+                <img src="images/players/player-1.png" alt="">
+                <h3>Neymar jr</h3>
+                <p class="player-bio"> akkas ali, known as aikka, <br> is a Ugandian professional footballer who
+                    plays as
+                    a forward . </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-2.png" alt="">
+                <h3>Lionel Messi</h3>
+                <p class="player-bio"> akkas ali, known as aikka, <br> is a Ugandian professional footballer who
+                    plays as
+                    a
+                    forward . </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-3.png" alt="">
+                <h3>Cristiano Ronaldo</h3>
+                <p class="player-bio"> akkas ali, known as aikka,<br> is a Ugandian professional footballer who
+                    plays as
+                    a
+                    forward . </p>
+            </div>
+
+
+            <div class="players">
+                <img src="images/players/player-4.png" alt="">
+                <h3>Paulo Dybala</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as
+                    a
+                    forward for. </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-5.png" alt="">
+                <h3>Mesut Ozil</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as
+                    a
+                    forward </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-6.png" alt="">
+                <h3>Mauro Icardi</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as
+                    a
+                    forward.
+                </p>
+            </div>
+
+            <div class="players">
+                <img src="images/players/player-7.png" alt="">
+                <h3>Angel Di Maria</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as a
+                    forward . </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-8.png" alt="">
+                <h3>Kylian Mbappé</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as a
+                    forward . </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-9.png" alt="">
+                <h3>Mohamed Salah</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as a
+                    forward .</p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-10.png" alt="">
+                <h3>Harry Kane</h3>
+                <p class="player-bio"> akkas ali, known as aikka, is a Ugandian professional footballer who plays as a
+                    forward. </p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-11.png" alt="">
+                <h3>Kevin De Bruyne</h3>
+                <p class="player-bio"> akkas ali, known as aikka,<br> is a Ugandian professional footballer who plays as
+                    a
+                    forward .</p>
+            </div>
+            <div class="players">
+                <img src="images/players/player-12.png" alt="">
+                <h3>Philippe Coutinho</h3>
+                <p class="player-bio"> akkas ali, known as aikka,<br> is a Ugandian professional footballer who plays as
+                    a
+                    forward .</p>
+            </div>
+        </section>
+        <!------- section-3  ------------->
+        <section>
+            <div class="sponsor">
+                <h2>Official Sponsors</h2>
+                <img src="images/coke.jpg" alt="">
+                <img src="images/lg.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
