--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
         <section>
             <div class="sponsor">
                 <h2>Official Sponsors</h2>
-                <img src="images/coke.jpg" alt="">
+                <img src="images/coke.jpg" alt=""><br>
                 <img src="images/lg.png" alt="">
             </div>
         </section>
+        <hr>
     </main>
 </body>
 
