--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>responsive-football</title>
+    <!-- font awsome -->
+    <script src="https://kit.fontawesome.com/08b2b565ad.js" crossorigin="anonymous"></script>
 
+    <!-- style css  -->
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -134,7 +137,48 @@
             </div>
         </section>
         <hr>
+        <section>
+            <h2>To Get More News
+            </h2>
+            <form action="">
+                <P>
+                    Name: <input type="text" name="" placeholder="Enter your name" id="">
+                    Email: <input type="text" name="" placeholder="Enter your email" id="">
+                    Password: <input type="password" name="" placeholder="Enter your Password" id="">
+                <fieldset>
+                    <legend>Gender</legend>
+                    <p>
+                        <label for="Male">
+                            <input type="radio" name="Male" id="male">Male
+                        </label>
+                    </p>
+                    <p>
+                        <label for="Female">
+                            <input type="radio" name="Female" id="female">Female
+                        </label>
+                    </p>
+                </fieldset>
+                <br>
+                <p>Goodwill & Exhortation</p>
+                <textarea name="" id="" cols="50" rows="10"></textarea>
+                <button type="submit">submit</button>
+                <button type="reset">reset</button>
+
+            </form>
+        </section>
     </main>
+    <br>
+    <footer>
+        <div class="footer">
+            <img src="images/Logo.png" alt="">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram-square"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+
+    </footer>
+    <p id="text-center"> Copyright © 2021 Goal (football) All rights reserved</p>
 </body>
 
 </html>
