--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             </div>
         </section>
         <hr>
+        <!-- section 4 start  -->
         <section>
             <h2>To Get More News
             </h2>
@@ -168,6 +169,7 @@
         </section>
     </main>
     <br>
+    <!------- footer start  --------->
     <footer>
         <div class="footer">
             <img src="images/Logo.png" alt="">
